UserInyerface completed (after feedback)